--- a/apps/templates/includes/footer-fullscreen.html
+++ b/apps/templates/includes/footer-fullscreen.html
@@ -1,21 +1,26 @@
-
-    <footer class="py-5">
-      <div class="container">
-        <div class="row align-items-center justify-content-xl-between">
-          <div class="col-xl-6">
-            <div class="copyright text-center text-xl-left text-muted">
-                <a target="_blank" 
-                   href="https://appseed.us/admin-dashboards/django" 
-                   class="font-weight-bold ml-1" target="_blank">More Dashboards</a>
-            </div>
-          </div>
-          <div class="col-xl-6">
-            <div class="text-center text-xl-right text-muted">
-               &copy; <a target="_blank" 
-                         href="https://bit.ly/3fKQZaL">Creative-Tim</a> 
-               - coded by <a target="_blank" href="https://appseed.us">AppSeed</a>
-            </div>
-          </div>
+<footer class="py-5" style="background-color: #f9f6f1; border-top: 1px solid #d3c9b8;">
+  <div class="container">
+    <div class="row align-items-center justify-content-xl-between">
+      <div class="col-xl-6">
+        <div class="copyright text-center text-xl-left text-muted" style="color: #6b4c3b; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
+          <a target="_blank"
+             href="https://appseed.us/admin-dashboards/django"
+             class="font-weight-bold ml-1"
+             style="color: #7d5a44; text-decoration: none;">
+            Plus de tableaux de bord
+          </a>
         </div>
       </div>
-    </footer>
+      <div class="col-xl-6">
+        <div class="text-center text-xl-right text-muted" style="color: #6b4c3b; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
+           &copy; <a target="_blank"
+                     href="https://bit.ly/3fKQZaL"
+                     style="color: #7d5a44; text-decoration: none;">
+                     Creative-Tim
+           </a>
+           - développé par <a target="_blank" href="https://appseed.us" style="color: #7d5a44; text-decoration: none;">AppSeed</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
