--- a/apps/templates/accounts/login.html
+++ b/apps/templates/accounts/login.html
@@ -1,79 +1,98 @@
 {% extends 'layouts/base-fullscreen.html' %}
 
-{% block title %} Login {% endblock title %}
+{% block title %} Connexion - Élevage de Poules {% endblock title %}
 
 <!-- Specific CSS goes HERE -->
-{% block stylesheets %}{% endblock stylesheets %}
+{% block stylesheets %}
+<style>
+  .card-header {
+    background-image: url('/static/assets/img/poules-header.jpg');
+    background-size: cover;
+    background-position: center;
+    height: 150px;
+  }
+  .text-muted.text-center.mt-2.mb-3 {
+    color: #8b4513 !important; /* couleur terre */
+    font-weight: bold;
+  }
+  .card.bg-secondary {
+    background-color: #fff8f0 !important;
+  }
+  .btn-primary {
+    background-color: #a0522d;
+    border-color: #a0522d;
+  }
+  .btn-primary:hover {
+    background-color: #8b4513;
+    border-color: #8b4513;
+  }
+  .input-group-text i {
+    color: #a0522d;
+  }
+</style>
+{% endblock stylesheets %}
 
 {% block content %}
+<div class="container mt--8 pb-5">
+  <div class="row justify-content-center">
+    <div class="col-lg-5 col-md-7">
+      <div class="card bg-secondary shadow border-0">
+        <div class="card-header bg-transparent pb-5">
+          <div class="text-muted text-center mt-2 mb-3">
+            Bienvenue à la Ferme 🐔
+          </div>
+        </div>
+        <div class="card-body px-lg-5 py-lg-5">
+          <div class="text-center text-muted mb-4">
+            {% if msg %}
+              <p>{{ msg }}</p>
+            {% else %}
+              <p>Veuillez entrer vos identifiants</p>
+            {% endif %}
+          </div>
 
-    <!-- Page content -->
-    <div class="container mt--8 pb-5">
-      <div class="row justify-content-center">
-        <div class="col-lg-5 col-md-7">
-          <div class="card bg-secondary shadow border-0">
-            <div class="card-header bg-transparent pb-5">
-              <div class="text-muted text-center mt-2 mb-3">
-                Sign IN
+          <form method="POST">
+            {% csrf_token %}
+
+            <div class="form-group mb-3">
+              <div class="input-group input-group-alternative">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="ni ni-single-02"></i></span>
+                </div>
+                {{ form.username }}
               </div>
             </div>
-            <div class="card-body px-lg-5 py-lg-5">
-              <div class="text-center text-muted mb-4">
-
-                {% if msg %}
-                  <p>{{ msg }}</p>
-                {% else %}
-                  <p>
-                    Add your credentials
-                  </p>
-                {% endif %}  
-
+            <div class="form-group">
+              <div class="input-group input-group-alternative">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
+                </div>
+                {{ form.password }}
               </div>
-
-              <form method="POST">
-
-                {% csrf_token %}
-
-                <div class="form-group mb-3">
-                  <div class="input-group input-group-alternative">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text"><i class="ni ni-hat-3"></i></span>
-                    </div>
-                    {{ form.username }}
-                  </div>
-                </div>
-                <div class="form-group">
-                  <div class="input-group input-group-alternative">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
-                    </div>
-                    {{ form.password }}
-                  </div>
-                </div>
-                <div class="custom-control custom-control-alternative custom-checkbox">
-                  <input class="custom-control-input" id=" customCheckLogin" type="checkbox">
-                  <label class="custom-control-label" for=" customCheckLogin">
-                    <span class="text-muted">Remember me</span>
-                  </label>
-                </div>
-                <div class="text-center">
-                  <button type="submit" class="btn btn-primary my-4">Sign in</button>
-                </div>
-              </form>
             </div>
-          </div>
-          <div class="row mt-3">
-            <div class="col-6">
-              <a href="{% url 'register' %}" class="text-light"><small>Register</small></a>
+            <div class="custom-control custom-control-alternative custom-checkbox">
+              <input class="custom-control-input" id="customCheckLogin" type="checkbox">
+              <label class="custom-control-label" for="customCheckLogin">
+                <span class="text-muted">Se souvenir de moi</span>
+              </label>
             </div>
-            <div class="col-6 text-right">
-              <a href="https://appseed.us/support" class="text-light"><small>Get Support</small></a>
+            <div class="text-center">
+              <button type="submit" class="btn btn-primary my-4">Connexion</button>
             </div>
-          </div>
+          </form>
+        </div>
+      </div>
+      <div class="row mt-3">
+        <div class="col-6">
+          <a href="{% url 'register' %}" class="text-dark"><small>Créer un compte</small></a>
+        </div>
+        <div class="col-6 text-right">
+          <a href="https://appseed.us/support" class="text-dark"><small>Besoin d'aide ?</small></a>
         </div>
       </div>
     </div>
-
+  </div>
+</div>
 {% endblock content %}
 
 <!-- Specific JS goes HERE --> 
