--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -1,49 +1,52 @@
-<nav class="navbar navbar-top navbar-expand navbar-dark bg-primary border-bottom">
+<nav class="navbar navbar-top navbar-expand navbar-dark" style="background-color: #7a5a2a; border-bottom: 1px solid #a3864a;">
   <div class="container-fluid">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <!-- Search form -->
       <form class="navbar-search navbar-search-light form-inline mr-sm-3" id="navbar-search-main">
-        <div class="form-group mb-0">
+        <div class="form-group mb-0" style="width: 250px;">
           <div class="input-group input-group-alternative input-group-merge">
             <div class="input-group-prepend">
-              <span class="input-group-text"><i class="fas fa-search"></i></span>
+              <span class="input-group-text" style="background-color: #a3864a; color: #fff;">
+                <i class="fas fa-search"></i>
+              </span>
             </div>
-            <input class="form-control" placeholder="Search" type="text">
+            <input class="form-control" placeholder="Rechercher" type="text" style="background-color: #d1c7a1; border: none; color: #4b3b1f;">
           </div>
         </div>
-        <button type="button" class="close" data-action="search-close" data-target="#navbar-search-main" aria-label="Close">
+        <button type="button" class="close" data-action="search-close" data-target="#navbar-search-main" aria-label="Close" style="color: #fff;">
           <span aria-hidden="true">×</span>
         </button>
       </form>
       <!-- Navbar links -->
-      <ul class="navbar-nav align-items-center  ml-md-auto ">
+      <ul class="navbar-nav align-items-center ml-md-auto">
         <li class="nav-item d-xl-none">
           <!-- Sidenav toggler -->
-          <div class="pr-3 sidenav-toggler sidenav-toggler-dark" data-action="sidenav-pin" data-target="#sidenav-main">
+          <div class="pr-3 sidenav-toggler sidenav-toggler-dark" data-action="sidenav-pin" data-target="#sidenav-main" style="color: #a3864a;">
             <div class="sidenav-toggler-inner">
-              <i class="sidenav-toggler-line"></i>
-              <i class="sidenav-toggler-line"></i>
-              <i class="sidenav-toggler-line"></i>
+              <i class="sidenav-toggler-line" style="background-color: #a3864a;"></i>
+              <i class="sidenav-toggler-line" style="background-color: #a3864a;"></i>
+              <i class="sidenav-toggler-line" style="background-color: #a3864a;"></i>
             </div>
           </div>
         </li>
         <li class="nav-item d-sm-none">
-          <a class="nav-link" href="#" data-action="search-show" data-target="#navbar-search-main">
+          <a class="nav-link" href="#" data-action="search-show" data-target="#navbar-search-main" style="color: #f7f1d1;">
             <i class="ni ni-zoom-split-in"></i>
           </a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: #f7f1d1;">
             <i class="ni ni-bell-55"></i>
           </a>
-          <div class="dropdown-menu dropdown-menu-xl  dropdown-menu-right  py-0 overflow-hidden">
+          <div class="dropdown-menu dropdown-menu-xl dropdown-menu-right py-0 overflow-hidden" style="background-color: #d1c7a1; color: #4b3b1f;">
             <!-- Dropdown header -->
             <div class="px-3 py-3">
-              <h6 class="text-sm text-muted m-0">You have <strong class="text-primary">13</strong> notifications.</h6>
+              <h6 class="text-sm text-muted m-0">Vous avez <strong class="text-primary">13</strong> notifications.</h6>
             </div>
             <!-- List group -->
             <div class="list-group list-group-flush">
-              <a href="#!" class="list-group-item list-group-item-action">
+              <!-- Exemple d'une notification -->
+              <a href="#!" class="list-group-item list-group-item-action" style="background-color: transparent; color: #4b3b1f;">
                 <div class="row align-items-center">
                   <div class="col-auto">
                     <!-- Avatar -->
@@ -55,105 +58,30 @@
                         <h4 class="mb-0 text-sm">John Snow</h4>
                       </div>
                       <div class="text-right text-muted">
-                        <small>2 hrs ago</small>
+                        <small>il y a 2h</small>
                       </div>
                     </div>
-                    <p class="text-sm mb-0">Let's meet at Starbucks at 11:30. Wdyt?</p>
+                    <p class="text-sm mb-0">Retrouvons-nous chez Starbucks à 11h30. Qu'en penses-tu ?</p>
                   </div>
                 </div>
               </a>
-              <a href="#!" class="list-group-item list-group-item-action">
-                <div class="row align-items-center">
-                  <div class="col-auto">
-                    <!-- Avatar -->
-                    <img alt="Image placeholder" src="/static/assets/img/theme/team-2.jpg" class="avatar rounded-circle">
-                  </div>
-                  <div class="col ml--2">
-                    <div class="d-flex justify-content-between align-items-center">
-                      <div>
-                        <h4 class="mb-0 text-sm">John Snow</h4>
-                      </div>
-                      <div class="text-right text-muted">
-                        <small>3 hrs ago</small>
-                      </div>
-                    </div>
-                    <p class="text-sm mb-0">A new issue has been reported for Argon.</p>
-                  </div>
-                </div>
-              </a>
-              <a href="#!" class="list-group-item list-group-item-action">
-                <div class="row align-items-center">
-                  <div class="col-auto">
-                    <!-- Avatar -->
-                    <img alt="Image placeholder" src="/static/assets/img/theme/team-3.jpg" class="avatar rounded-circle">
-                  </div>
-                  <div class="col ml--2">
-                    <div class="d-flex justify-content-between align-items-center">
-                      <div>
-                        <h4 class="mb-0 text-sm">John Snow</h4>
-                      </div>
-                      <div class="text-right text-muted">
-                        <small>5 hrs ago</small>
-                      </div>
-                    </div>
-                    <p class="text-sm mb-0">Your posts have been liked a lot.</p>
-                  </div>
-                </div>
-              </a>
-              <a href="#!" class="list-group-item list-group-item-action">
-                <div class="row align-items-center">
-                  <div class="col-auto">
-                    <!-- Avatar -->
-                    <img alt="Image placeholder" src="/static/assets/img/theme/team-4.jpg" class="avatar rounded-circle">
-                  </div>
-                  <div class="col ml--2">
-                    <div class="d-flex justify-content-between align-items-center">
-                      <div>
-                        <h4 class="mb-0 text-sm">John Snow</h4>
-                      </div>
-                      <div class="text-right text-muted">
-                        <small>2 hrs ago</small>
-                      </div>
-                    </div>
-                    <p class="text-sm mb-0">Let's meet at Starbucks at 11:30. Wdyt?</p>
-                  </div>
-                </div>
-              </a>
-              <a href="#!" class="list-group-item list-group-item-action">
-                <div class="row align-items-center">
-                  <div class="col-auto">
-                    <!-- Avatar -->
-                    <img alt="Image placeholder" src="/static/assets/img/theme/team-5.jpg" class="avatar rounded-circle">
-                  </div>
-                  <div class="col ml--2">
-                    <div class="d-flex justify-content-between align-items-center">
-                      <div>
-                        <h4 class="mb-0 text-sm">John Snow</h4>
-                      </div>
-                      <div class="text-right text-muted">
-                        <small>3 hrs ago</small>
-                      </div>
-                    </div>
-                    <p class="text-sm mb-0">A new issue has been reported for Argon.</p>
-                  </div>
-                </div>
-              </a>
+              <!-- Répéter pour chaque notification... -->
             </div>
             <!-- View all -->
-            <a href="#!" class="dropdown-item text-center text-primary font-weight-bold py-3">View all</a>
+            <a href="#!" class="dropdown-item text-center text-primary font-weight-bold py-3">Voir tout</a>
           </div>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: #f7f1d1;">
             <i class="ni ni-ungroup"></i>
           </a>
-          <div class="dropdown-menu dropdown-menu-lg dropdown-menu-dark bg-default  dropdown-menu-right ">
+          <div class="dropdown-menu dropdown-menu-lg dropdown-menu-dark bg-default dropdown-menu-right" style="background-color: #a3864a;">
             <div class="row shortcuts px-4">
               <a href="#!" class="col-4 shortcut-item">
                 <span class="shortcut-media avatar rounded-circle bg-gradient-red">
                   <i class="ni ni-calendar-grid-58"></i>
                 </span>
-                <small>Calendar</small>
+                <small>Calendrier</small>
               </a>
               <a href="#!" class="col-4 shortcut-item">
                 <span class="shortcut-media avatar rounded-circle bg-gradient-orange">
@@ -165,60 +93,60 @@
                 <span class="shortcut-media avatar rounded-circle bg-gradient-info">
                   <i class="ni ni-credit-card"></i>
                 </span>
-                <small>Payments</small>
+                <small>Paiements</small>
               </a>
               <a href="#!" class="col-4 shortcut-item">
                 <span class="shortcut-media avatar rounded-circle bg-gradient-green">
                   <i class="ni ni-books"></i>
                 </span>
-                <small>Reports</small>
+                <small>Rapports</small>
               </a>
               <a href="#!" class="col-4 shortcut-item">
                 <span class="shortcut-media avatar rounded-circle bg-gradient-purple">
                   <i class="ni ni-pin-3"></i>
                 </span>
-                <small>Maps</small>
+                <small>Cartes</small>
               </a>
               <a href="#!" class="col-4 shortcut-item">
                 <span class="shortcut-media avatar rounded-circle bg-gradient-yellow">
                   <i class="ni ni-basket"></i>
                 </span>
-                <small>Shop</small>
+                <small>Boutique</small>
               </a>
             </div>
           </div>
         </li>
       </ul>
-      <ul class="navbar-nav align-items-center  ml-auto ml-md-0 ">
+      <ul class="navbar-nav align-items-center ml-auto ml-md-0">
         <li class="nav-item dropdown">
-          <a class="nav-link pr-0" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link pr-0" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: #f7f1d1;">
             <div class="media align-items-center">
               <span class="avatar avatar-sm rounded-circle">
                 <img alt="Image placeholder" src="/static/assets/img/theme/team-4.jpg">
               </span>
-              <div class="media-body  ml-2  d-none d-lg-block">
-                <span class="mb-0 text-sm  font-weight-bold">
+              <div class="media-body ml-2 d-none d-lg-block" style="color: #f7f1d1;">
+                <span class="mb-0 text-sm font-weight-bold">
                   {{ request.user.username }}
                 </span>
               </div>
             </div>
           </a>
-          <div class="dropdown-menu  dropdown-menu-right ">
+          <div class="dropdown-menu dropdown-menu-right" style="background-color: #d1c7a1; color: #4b3b1f;">
             <div class="dropdown-header noti-title">
-              <h6 class="text-overflow m-0">Welcome!</h6>
+              <h6 class="text-overflow m-0">Bienvenue !</h6>
             </div>
-            <a href="/profile.html" class="dropdown-item">
+            <a href="/profile.html" class="dropdown-item" style="color: #4b3b1f;">
               <i class="ni ni-single-02"></i>
-              <span>My profile</span>
+              <span>Mon profil</span>
             </a>
-            <a target="_blank" href="http://appseed.us/support" class="dropdown-item">
+            <a target="_blank" href="http://appseed.us/support" class="dropdown-item" style="color: #4b3b1f;">
               <i class="ni ni-support-16"></i>
               <span>Support</span>
             </a>
             <div class="dropdown-divider"></div>
-            <a href="{% url 'logout' %}" class="dropdown-item">
-              <i class="ni ni-user-run text-red"></i>
-              <span>Logout</span>
+            <a href="{% url 'logout' %}" class="dropdown-item" style="color: #b02a2a;">
+              <i class="ni ni-user-run"></i>
+              <span>Déconnexion</span>
             </a>
           </div>
         </li>
